fix: :lipstick: Place cursor out of screen

--- a/css/cursor.css
+++ b/css/cursor.css
@@ -2,6 +2,8 @@
     position: fixed;
     display: block;
 
+    top: -2rem;
+    left: -2rem;
     width: 1.5rem;
     height: 1.5rem;
     border: 2px solid #fe3218;
